--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,17 @@
 github_users:
-  - torvalds
-  - alshedivat
-
-repo_description_lines_max: 2
+  - GeoffreyKarnbach
+repo_description_lines_max: 10
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - GeoffreyKarnbach/RecipePlaner
+  - GeoffreyKarnbach/CryptoPay
+  - GeoffreyKarnbach/GymCompanionApp
+  - GeoffreyKarnbach/SpotifyLanguageSorting
+  - GeoffreyKarnbach/TaskAutomation
+  - GeoffreyKarnbach/JeffOS
+  - GeoffreyKarnbach/Python-Datastructures
+  - GeoffreyKarnbach/ViennaSubwaySimulation
+  - GeoffreyKarnbach/Fake-News-Detector-AI
+  - GeoffreyKarnbach/Titanic-Survival-Analysis
+
+
